--- a/del1_teoretiska_fragor.ipynb
+++ b/del1_teoretiska_fragor.ipynb
@@ -416,6 +416,23 @@
     "- **Vilket betyg anser du att du ska ha och varför?**\n",
     "- **Vad har varit mest utmanande och hur har du hanterat det?**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3043ab83",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Det roligaste har varit att jobba med Streamlit. Jag tyckte det var kul att kunna göra något som ser ut som en riktig webbsida, och att användaren kan klicka runt och filtrera datan direkt. Det kändes mer \"på riktigt\" än att bara skriva kod i Jupyter Notebook. även om jag tyckte att Notebook var väldigt bra också!\n",
+    "\n",
+    "\n",
+    "\n",
+    "Jag vill tycka att jag har motsvarat alla kraven som kursen ber om så jag skulle gärna vilja ha minst ett G.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Det som var svårast var att få layouten i Streamlit att bli precis som jag ville. Jag ville till exempel ha nyckeltalen synliga hela tiden högst upp på sidan, men jag hittade inget enkelt sätt att göra det. Jag provade olika lösningar men det blev inte som jag tänkt mig. Trots det lärde jag mig mycket av att testa och jag förstod bättre hur Streamlit fungerar och hur man kan hitta svar på problem när man kör fast."
+   ]
   }
  ],
  "metadata": {
